--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -39,7 +39,7 @@
   }
 
   .modal {
-    @apply fixed left-1/2 top-1/2 z-50 w-[calc(100%-4rem)] sm:w-full -translate-x-[calc(50%+2rem)] sm:-translate-x-1/2 -translate-y-1/2 max-w-lg gap-4 bg-slate-50 dark:bg-slate-800 border dark:border-slate-700 p-6 shadow-md transition duration-200 ease-in-out rounded-lg mx-8 sm:mx-0;
+    @apply fixed left-1/2 top-1/2 z-50 w-[calc(100%-4rem)] sm:w-full -translate-x-[calc(50%+2rem)] sm:-translate-x-1/2 -translate-y-1/2 max-w-lg gap-4 bg-slate-50 dark:bg-slate-800 border dark:border-slate-700 p-6 shadow-md transition duration-200 ease-in-out rounded-lg mx-8 sm:mx-0 overflow-y-auto max-h-[calc(100svh-8rem)] my-4 sm:max-h-none sm:my-0;
   }
 
   .modal-backdrop {
