--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -1,6 +1,6 @@
 <div class="my-6">
   <article id="<%= dom_id run %>">
-    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700 text-normal">
+    <div class="card text-normal">
       <% unless current_page?(run_path(run)) || current_page?(user_path(run.user)) || !local_assigns[:team] %>
         <div class="mb-4 flex flex-wrap-reverse items-center gap-4">
           <% unless current_page?(run_path(run)) || current_page?(user_path(run.user)) %>
