--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -6,7 +6,7 @@
 
   <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
     <!-- Total Miles Card -->
-    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+    <div class="card">
       <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Total Miles</h2>
       <p class="text-3xl font-bold">
         <%= user.total_miles %>
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Time Spent Running Card -->
-    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+    <div class="card">
       <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Time Spent Running</h2>
       <p class="text-3xl font-bold">
         <%= precise_time_ago(user.total_duration, format: :short) %>
@@ -33,7 +33,7 @@
     <% current_streak_start_date = current_streak_data[:start_date] %>
     <% current_streak_end_date = current_streak_data[:end_date] %>
 
-    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+    <div class="card">
       <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Current Streak</h2>
       <p class="text-3xl font-bold">
         <%= current_streak %>
@@ -56,7 +56,7 @@
     <% longest_streak_start_date = longest_streak_data[:start_date] %>
     <% longest_streak_end_date = longest_streak_data[:end_date] %>
 
-    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+    <div class="card">
       <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Record Streak</h2>
       <p class="text-3xl font-bold">
         <%= longest_streak %>
@@ -92,7 +92,7 @@
 
     <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
       <% if user.show_email? %>
-        <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+        <div class="card">
           <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Email Address</h2>
           <p class="text-lg font-bold mb-4">
             <%= user.email %>
@@ -105,7 +105,7 @@
       <% end %>
 
       <% if user.show_phone? && user.phone_number? %>
-        <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+        <div class="card">
           <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Phone Number</h2>
           <p class="text-lg font-bold mb-4">
             <%= number_to_phone(user.phone_number, area_code: true) %>
