--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, @team.name %>
 
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl px-4 mx-auto my-16">
-  <div class="pb-6 text-center">
+  <div class="mb-6 text-center">
 
     <% if @team.photo.attached? %>
       <%= image_tag @team.photo.variant(resize_to_limit: [150, 150]).processed, class: 'size-28 sm:size-32 md:size-36 rounded-lg drop-shadow-lg dark:drop-shadow-none mx-auto mb-4 object-cover' %>
