--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -48,11 +48,11 @@
             <!-- Run Actions Dropdown Menu -->
             <div
               data-dropdown-target="dropdown"
-              class="dropdown-menu"
+              class="dropdown-menu origin-top-right right-0 top-12"
             >
               <!-- Open Edit Run Modal Button -->
               <button data-action="click->modal#open" data-modal-id="editRunModal" class="dropdown-option">
-                <%= inline_svg_tag 'icons/edit.svg', class: 'size-5' %>
+                <%= inline_svg_tag 'icons/pencil.svg', class: 'size-5' %>
                 Edit run
               </button>
 
