--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -11,9 +11,9 @@
     data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
     data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
     data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
-    class="h-[calc(100%-2.5rem)] flex flex-col overflow-y-auto p-4 bg-slate-50 dark:bg-slate-800 border dark:border-slate-700 m-5 mr-0 rounded-lg shadow-lg"
+    class="h-[calc(100%-2.5rem)] flex flex-col overflow-y-auto p-4 bg-slate-50 dark:bg-slate-800 border dark:border-slate-700 m-5 mr-0 rounded-lg shadow-xl"
   >
-    <div class="mb-4 text-xl font-bold">
+    <div class="mb-4 text-xl font-bold mx-2 mt-2">
       <span class="text-indigo-500">Team</span><span>Runner</span>
     </div>
 
