--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -18,8 +18,98 @@
 
     <%= simple_format @team.description, class: 'text-soft text-sm md:max-w-[80%] md:mx-auto md:text-balance' unless @team.description.blank? %>
 
-    <div class="flex flex-wrap items-center justify-center md:justify-end gap-4 mt-4">
-      <%= render 'teams/shared/team_buttons', team: @team %>
+    <div class="flex items-center justify-center md:justify-end mt-4">
+      <% if current_user.member_of?(@team) %>
+        <div
+          data-controller="modal"
+          data-modal-hide-modal-class="opacity-0 scale-75 pointer-events-none"
+          data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
+          data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
+          data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
+          class="relative"
+        >
+          <div
+            data-controller="dropdown"
+            data-dropdown-hide-dropdown-class="pointer-events-none scale-75 opacity-0"
+            data-dropdown-show-dropdown-class="pointer-events-auto scale-100 opacity-100"
+            data-dropdown-icon-open-class="rotate-180"
+            data-dropdown-dropdown-open-class="shadow-md"
+            class="text-sm rounded-md transition duration-200 ease-in-out"
+          >
+            <!-- Team Actions Dropdown Trigger -->
+            <button
+              type="button"
+              data-action="click->dropdown#toggle"
+              class="dropdown-toggle"
+              >
+              <span>Actions</span>
+              <%= inline_svg_tag 'icons/chevron-down.svg', class: 'size-4 text-soft transition duration-200 ease-in-out', data: { dropdown_target: 'arrowIcon' } %>
+            </button>
+
+            <!-- Team Actions Dropdown Menu -->
+            <div
+              data-dropdown-target="dropdown"
+              class="dropdown-menu origin-top sm:origin-top-right left-1/2 -translate-x-1/2 top-12 sm:right-0 sm:left-auto sm:-translate-x-0"
+            >
+              <!-- Edit/Join/Leave/Cancel Request Button -->
+              <%= render 'teams/shared/team_links', team: @team %>
+
+              <% if current_user.member_of?(@team) %>
+                <%= link_to edit_team_team_membership_path(@team, current_user), class: 'dropdown-option' do %>
+                  <%= inline_svg_tag 'icons/user-pencil.svg', class: 'size-5' %>
+                  Edit personal goals
+                <% end %>
+              <% end %>
+
+              <!-- Open Delete Team Modal Button -->
+              <% if current_user.owns?(@team) %>
+                <button data-action="click->modal#open" data-modal-id="deleteTeam" class="dropdown-option-destructive">
+                  <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
+                  Delete team
+                </button>
+              <% end %>
+            </div>
+          </div>
+
+          <!-- Delete Team Modal Backdrop -->
+          <div
+            data-modal-target="backdrop"
+            data-modal-id="deleteTeam"
+            data-action="click->modal#backdropClose"
+            class="modal-backdrop opacity-0 pointer-events-none"></div>
+
+          <!-- Delete Team Modal -->
+          <div
+            id="deleteTeam"
+            role="dialog"
+            tabindex="-1"
+            data-modal-target="modal"
+            class="modal opacity-0 pointer-events-none"
+          >
+            <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+              <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Team?</h2>
+              <p class="text-soft text-sm">Are you sure? This cannot be undone.</p>
+            </div>
+
+            <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+              <button data-action="click->modal#close" data-modal-id="deleteTeam" type="button" class="btn btn-white mt-2 sm:mt-0">Cancel</button>
+              <%= button_to 'Delete team',
+                            @team,
+                            method: :delete,
+                            data: { turbo: false },
+                            class: 'btn btn-destructive w-full whitespace-nowrap'
+              %>
+            </div>
+
+            <button data-action="click->modal#close" type="button" data-modal-id="deleteTeam" class="absolute right-0 top-0 p-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+              <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+              <span class="sr-only">Close</span>
+            </button>
+          </div>
+        </div>
+      <% else %>
+        <%= render 'teams/shared/team_buttons', team: @team %>
+      <% end %>
     </div>
   </div>
 
