--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -46,6 +46,10 @@
     @apply fixed inset-0 z-50 bg-black/50 backdrop-blur-sm transition duration-200 ease-in-out w-full h-full;
   }
 
+  .modal-x-btn {
+    @apply absolute right-2 top-2 p-2 rounded-full opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2 hover:bg-slate-200 dark:hover:bg-slate-700;
+  }
+
   .card {
     @apply p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700;
   }
