--- a/app/views/runs/_new_run_modal.html.erb
+++ b/app/views/runs/_new_run_modal.html.erb
@@ -20,7 +20,7 @@
   <%= render 'runs/form_modal', run: Run.new %>
 
   <!-- Close button -->
-  <button data-action="click->modal#close" type="button" data-modal-id="newRunModal" class="absolute right-0 top-0 p-4 rounded-lg opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+  <button data-action="click->modal#close" type="button" data-modal-id="newRunModal" class="modal-x-btn">
     <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
     <span class="sr-only">Close</span>
   </button>
