--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -59,7 +59,7 @@
       %>
     </div>
 
-    <button data-action="click->modal#close" type="button" data-modal-id="deleteTeamModal" class="absolute right-0 top-0 p-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+    <button data-action="click->modal#close" type="button" data-modal-id="deleteTeamModal" class="modal-x-btn">
       <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
       <span class="sr-only">Close</span>
     </button>
