--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -101,7 +101,7 @@
               %>
             </div>
 
-            <button data-action="click->modal#close" type="button" data-modal-id="deleteTeam" class="absolute right-0 top-0 p-4 rounded-sm opacity-70 transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-offset-2">
+            <button data-action="click->modal#close" type="button" data-modal-id="deleteTeam" class="modal-x-btn">
               <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
               <span class="sr-only">Close</span>
             </button>
