--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -88,7 +88,7 @@
           >
             <div class="flex flex-col space-y-1.5 text-center sm:text-left">
               <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Team?</h2>
-              <p class="text-soft text-sm">Are you sure? This cannot be undone.</p>
+              <p class="text-soft text-sm">Are you sure you want to delete this team? This action cannot be undone.</p>
             </div>
 
             <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
@@ -97,7 +97,7 @@
                             @team,
                             method: :delete,
                             data: { turbo: false },
-                            class: 'btn btn-destructive w-full whitespace-nowrap'
+                            class: 'btn btn-destructive font-bold w-full whitespace-nowrap'
               %>
             </div>
 
