feat: add team settings link to actions dropdown

--- a/app/views/teams/shared/_team_links.html.erb
+++ b/app/views/teams/shared/_team_links.html.erb
@@ -7,6 +7,11 @@
     Edit team
   <% end %>
 
+  <%= link_to edit_team_path(team, tab: 'settingsTab'), class: 'dropdown-option', data: { turbo: false } do %>
+    <%= inline_svg_tag 'icons/settings.svg', class: 'size-5' %>
+    Team settings
+  <% end %>
+
 <% elsif current_user.member_of?(team) %>
   <%= button_to leave_team_path(team), class: 'dropdown-option-destructive', data: { turbo: false } do %>
     <%= inline_svg_tag 'icons/arrow-left-out.svg', class: 'size-5' %>
