feat: make 'edit run' action primary

--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -50,7 +50,7 @@
               class="dropdown-menu origin-top-right right-0 top-12"
             >
               <!-- Open Edit Run Modal Button -->
-              <button data-action="click->modal#open" data-modal-id="editRunModal" class="dropdown-option">
+              <button data-action="click->modal#open" data-modal-id="editRunModal" class="dropdown-option-primary">
                 <%= inline_svg_tag 'icons/pencil.svg', class: 'size-5' %>
                 Edit run
               </button>
