--- a/app/views/pinned_pages/_list.html.erb
+++ b/app/views/pinned_pages/_list.html.erb
@@ -2,11 +2,12 @@
   <div class="space-y-1.5">
     <div class="mx-2 my-2 flex items-end justify-between">
       <p class="text-soft text-sm">Pinned pages</p>
-      <%= link_to 'Edit', manage_pinned_pages_path, data: { turbo: false }, class: 'btn-link-soft text-xs' if current_user.pinned_pages.any? %>
+      <% pinned_pages = current_user.pinned_pages.order(:position) %>
+      <%= link_to 'Edit', manage_pinned_pages_path, data: { turbo: false }, class: 'btn-link-soft text-xs' if pinned_pages.any? %>
     </div>
 
-    <% if current_user.pinned_pages.any? %>
-      <% current_user.pinned_pages.each do |page| %>
+    <% if pinned_pages.any? %>
+      <% pinned_pages.each do |page| %>
         <% link_options = { data: { turbo: false }, class: "group sidebar-link #{current_page?(page.page_url) ? 'sidebar-link-active' : 'sidebar-link-inactive' }" } %>
 
         <% link_content = capture do %>
