--- a/app/views/pinned_pages/manage.html.erb
+++ b/app/views/pinned_pages/manage.html.erb
@@ -7,21 +7,41 @@
     </div>
   </div>
 
-  <div>
-    <%= form_with url: update_all_pinned_pages_path, method: :patch do |f| %>
-      <div class="form-group">
-        <% @pinned_pages.each do |page| %>
-          <div class="flex items-center gap-3 mb-3">
-            <%= f.text_field "pinned_pages[#{page.id}][title]", value: page.title, class: 'form-input' %>
-            <%= link_to pinned_page_path(page), data: { turbo_method: :delete }, class: 'text-red-700 dark:text-red-400' do %>
-              <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
-              <span class="sr-only">Delete page</span>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
+  <%= form_with url: update_all_pinned_pages_path, method: :patch do |f| %>
+    <ul
+      data-controller="pinned-pages-reorder modal"
+      data-pinned-pages-reorder-url="<%= reorder_pinned_pages_path %>"
+      data-pinned-pages-reorder-target="list"
+      data-modal-hide-modal-class="opacity-0 scale-75 pointer-events-none"
+      data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
+      data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
+      data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
+    >
+      <% @pinned_pages.order(:position).each do |page| %>
+        <li
+          data-id="<%= page.id %>"
+          class="flex items-center gap-3 mb-3"
+        >
+          <div class="drag-handle p-2 cursor-move">
+            <%= inline_svg_tag 'icons/drag-handle.svg', class: 'size-5' %>
+            </div>
+          <%= f.text_field "pinned_pages[#{page.id}][title]", value: page.title, class: 'form-input' %>
 
+          <button data-action="click->modal#open" data-modal-id="deletePage_<%= page.id %>" class="text-red-700 dark:text-red-400">
+            <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
+            <span class="sr-only">Delete page</span>
+          </button>
+
+          <%= render 'delete_page_modal', page: page %>
+        </li>
+      <% end %>
+
+      <!-- Hidden input to store the order of pinned pages -->
+      <%= f.hidden_field :order, value: @pinned_pages.order(:position).pluck(:id).join(','), data: { pinned_pages_reorder_target: 'orderInput' } %>
+    </ul>
+
+    <div class="pt-6 mt-4 border-t border-slate-200 dark:border-slate-700">
       <%= f.submit 'Save changes', class: 'btn btn-primary' %>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
