--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,6 @@
       </div>
     </div>
 
-    <%= turbo_stream_from "pinned_pages_list" %> <!-- Enables Turbo Stream for the pinned pages list -->
+    <%= turbo_stream_from "pinned_pages_list" %>
   </body>
 </html>
